# alpakka_firmware

./: .gitignore  CMakeLists.txt  Makefile  changelog.md  license.md  readme.md  wsl.md
.github/workflows/: build.yml
docs/: ctrl_protocol.md  profile_lifecycle.md
scripts/: install.sh  load.sh  session.sh  session_dongle.sh  udp.py  version.sh
src/: bt_config.c  bus.c  button.c  common.c  config.c  ctrl.c  dhat.c  glyph.c  gyro.c  helper.c  hid.c  imu.c  led.c  logging.c  loop.c  main.c  nvm.c  profile.c  rotary.c  self_test.c  thanks.c  thumbstick.c  touch.c  tusb_config.c  uart.c  vector.c  webusb.c  wireless_device.c  wireless_host.c  wlan.c  xinput.c
src/headers/: bt_config.h  btstack_config.h  bus.h  button.h  common.h  config.h  ctrl.h  dhat.h  glyph.h  gyro.h  helper.h  hid.h  imu.h  led.h  logging.h  loop.h  lwipopts.h  nvm.h  pin.h  profile.h  rotary.h  self_test.h  thumbstick.h  touch.h  tusb_config.h  uart.h  vector.h  webusb.h  wireless.h  wlan.h  xinput.h
src/profiles/: console.c  console_legacy.c  custom.c  desktop.c  flight.c  fps_fusion.c  fps_fusion2.c  fps_wasd.c  fusion.c  home.c  home2.c  none.c  old_console.c  old_desktop.c  old_fps_fusion.c  old_fps_wasd.c  old_home.c  racing.c  rts.c  wasd.c
